add load resize

--- a/indx.html
+++ b/indx.html
@@ -54,7 +54,7 @@
 
     <!-- サイドのメニュー -->
     <div class="is-bg"></div><!-- /.is-bg -->
-    <h4 class="p-nav__menu js-menu">Menu</h4>
+    <h4 id="SideMenu" class="p-nav__menu">Menu</h4>
     <nav class="l-wrapper__nav l-side p-nav is-menu">
       <span class="js-menu-close">閉じるボタン</span>
       <p class="p-nav__title">バーガー</p>
